# BoulangerIA

./: README.md  app.py  package-lock.json  package.json  pyproject.toml
static/src/css/: input.css
templates/: index.html
