[tool.poetry]
name = "projetwebpythonflask"
version = "0.1.0"
description = "ChatGPT clone with Flask"
authors = ["Nathan KISS <nathan.kiss@viacesi.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.1"
openai = "^1.10.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
